feat: support some tag.

--- a/src/builder/template/class.html
+++ b/src/builder/template/class.html
@@ -1,5 +1,17 @@
-<div class="name-space" data-s="nameSpace"></div>
-<h1 data-s="className">FooClass</h1>
+<p class="classNotice">
+  <span class="namespace" data-s="nameSpace"></span>
+</p>
+
+<p class="classNotice">
+  <span class="classKind" data-s="classKind"></span>
+  <span class="extends" data-s="extends">| extends <a data-s="extendsClassName"></a></span>
+  <span class="implements" data-s="implements">| implements <span data-s="implementsClassName"></span></span>
+  <span data-s="sinceLabel">| since <span data-s="since"></span></span>
+</p>
+
+<h1>
+  <span data-s="className"></span>
+</h1>
 
 <div data-s="classDesc">class description</div>
 
@@ -9,24 +21,53 @@
 </div>
 
 <h2>Summary</h2>
-<div data-s="summaryStaticMembers"></div>
-<div data-s="summaryStaticMethods"></div>
-<div data-s="summaryConstructor"></div>
-<div data-s="summaryMembers"></div>
-<div data-s="summaryMethods"></div>
+<div data-s="summaryStaticPublicMemberDocs"></div>
+<div data-s="summaryStaticProtectedMemberDocs"></div>
+<div data-s="summaryStaticPrivateMemberDocs"></div>
 
-<h2 data-s="staticMembersTitle">Static Members</h2>
-<div data-s="staticMembers"></div>
+<div data-s="summaryStaticPublicMethodDocs"></div>
+<div data-s="summaryStaticProtectedMethodDocs"></div>
+<div data-s="summaryStaticPrivateMethodDocs"></div>
 
-<h2 data-s="staticMethodsTitle">Static Methods</h2>
-<div data-s="staticMethods"></div>
+<div data-s="summaryConstructorDocs"></div>
+
+<div data-s="summaryPublicMemberDocs"></div>
+<div data-s="summaryProtectedMemberDocs"></div>
+<div data-s="summaryPrivateMemberDocs"></div>
+
+<div data-s="summaryPublicMethodDocs"></div>
+<div data-s="summaryProtectedMethodDocs"></div>
+<div data-s="summaryPrivateMethodDocs"></div>
+
+<h2 data-s="staticPublicMembersTitle">Static Public Members</h2>
+<div data-s="staticPublicMembers"></div>
+<h2 data-s="staticProtectedMembersTitle">Static Protected Members</h2>
+<div data-s="staticProtectedMembers"></div>
+<h2 data-s="staticPrivateMembersTitle">Static Private Members</h2>
+<div data-s="staticPrivateMembers"></div>
+
+<h2 data-s="staticPublicMethodsTitle">Static Public Methods</h2>
+<div data-s="staticPublicMethods"></div>
+<h2 data-s="staticProtectedMethodsTitle">Static Protected Methods</h2>
+<div data-s="staticProtectedMethods"></div>
+<h2 data-s="staticPrivateMethodsTitle">Static Private Methods</h2>
+<div data-s="staticPrivateMethods"></div>
 
 <h2 data-s="constructorTitle">Constructor</h2>
 <div data-s="constructor"></div>
 
-<h2 data-s="membersTitle">Members</h2>
-<div data-s="members"></div>
+<h2 data-s="publicMembersTitle">Public Members</h2>
+<div data-s="publicMembers"></div>
+<h2 data-s="protectedMembersTitle">Protected Members</h2>
+<div data-s="protectedMembers"></div>
+<h2 data-s="privateMembersTitle">Private Members</h2>
+<div data-s="privateMembers"></div>
 
-<h2 data-s="methodsTitle">Methods</h2>
-<div data-s="methods"></div>
+<h2 data-s="publicMethodsTitle">Public Methods</h2>
+<div data-s="publicMethods"></div>
+<h2 data-s="protectedMethodsTitle">Protected Methods</h2>
+<div data-s="protectedMethods"></div>
+<h2 data-s="privateMethodsTitle">Private Methods</h2>
+<div data-s="privateMethods"></div>
+
 
