--- a/src/builder/template/members.html
+++ b/src/builder/template/members.html
@@ -1,5 +1,10 @@
 <div class="member" data-s="member">
-  <h3 data-s="anchor"><span data-s="name">method</span><span data-s="signature">(x, y)</span></h3>
+  <h3 data-s="anchor">
+    <span class="access" data-s="access"></span>
+    <span data-s="readonly"></span>
+    <span data-s="name"></span><span data-s="signature">(x, y)</span>
+    <span class="since" data-s="sinceLabel">since <span data-s="since"></span></span>
+  </h3>
   <div data-s="description">description</div>
 
   <div data-s="example">
