--- a/src/builder/template/methods.html
+++ b/src/builder/template/methods.html
@@ -1,5 +1,11 @@
 <div class="method" data-s="method">
-  <h3 data-s="anchor"><span data-s="name">method</span><span data-s="signature">(x, y)</span></h3>
+  <h3 data-s="anchor">
+    <span class="access" data-s="access"></span>
+    <span class="virtual" data-s="virtual"></span>
+    <span class="override" data-s="override"></span>
+    <span data-s="name">method</span><span data-s="signature">(x, y)</span>
+    <span class="since" data-s="sinceLabel">since <span data-s="since"></span></span>
+  </h3>
   <div data-s="description">description</div>
 
   <div class="argument-params" data-s="argumentParams">
@@ -13,7 +19,7 @@
         <td data-s="name">x</td>
         <td data-s="type">number</td>
         <td data-s="appendix">optional</td>
-        <td data-s="description">desc</td>
+        <td data-s="paramDescription">desc</td>
       </tr>
       </tbody>
     </table>
