--- a/src/builder/template/nav.html
+++ b/src/builder/template/nav.html
@@ -5,6 +5,11 @@
   <li data-s="classDoc"><a data-s="className"></a></li>
 </ul>
 
+<h2>Interfaces</h2>
+<ul>
+  <li data-s="interfaceDoc"><a data-s="interfaceName"></a></li>
+</ul>
+
 <h2>Namespaces</h2>
 <ul>
   <li data-s="namespaceDoc"><a data-s="namespace"></a></li>
