--- a/src/builder/template/summary.html
+++ b/src/builder/template/summary.html
@@ -1,10 +1,23 @@
 <table class="summary">
-  <thead><tr><td data-s="title">Members</td></tr></thead>
+  <thead><tr><td data-s="title" colspan="3">Members</td></tr></thead>
   <tbody>
   <tr data-s="target">
     <td>
-      <div><p><span data-s="name">member</span><span data-s="signature"></span></p></div>
+      <span class="access" data-s="access"></span>
+      <span class="virtual" data-s="virtual"></span>
+      <span class="override" data-s="override"></span>
+      <span class="readonly" data-s="readonly"></span>
+    </td>
+    <td>
+      <div>
+        <p>
+          <span data-s="name">member</span><span data-s="signature"></span>
+        </p>
+      </div>
       <div data-s="description">description</div>
+    </td>
+    <td>
+      <span class="since" data-s="sinceLabel">since <span data-s="since"></span></span>
     </td>
   </tr>
   </tbody>
