--- a/src/builder/template/namespace.html
+++ b/src/builder/template/namespace.html
@@ -10,11 +10,11 @@
 <h2>Summary</h2>
 <div data-s="summaryClassDocs"></div>
 <div data-s="summaryMemberDocs"></div>
-<div data-s="summaryFunctionDocs"></div>
+<div data-s="summaryMethodDocs"></div>
 <div data-s="summaryNamespaceDocs"></div>
 
 <h2>Members</h2>
 <div data-s="memberDocs"></div>
 
-<h2>Functions</h2>
-<div data-s="functionDocs"></div>
+<h2>Methods</h2>
+<div data-s="methodDocs"></div>
