--- a/src/builder/template/methods.html
+++ b/src/builder/template/methods.html
@@ -30,6 +30,13 @@
     <div class="return-desc" data-s="returnDescription"></div>
   </div>
 
+  <div class="throws" data-s="throws">
+    <div data-s="throw">
+      <h4>Throw: <span data-s="throwName"></span></h4>
+      <div data-s="throwDesc"></div>
+    </div>
+  </div>
+
   <div data-s="example">
     <h4>Example:</h4>
     <pre data-s="exampleDoc" class="prettyprint"><code data-s="exampleCode"></code></pre>
