--- a/src/builder/template/methods.html
+++ b/src/builder/template/methods.html
@@ -41,4 +41,8 @@
     <h4>Example:</h4>
     <pre data-s="exampleDoc" class="prettyprint"><code data-s="exampleCode"></code></pre>
   </div>
+
+  <div class="see" data-s="seeWrap">
+    <h4 data-s="see">See: <span data-s="seeLink"></span></h4>
+  </div>
 </div>
