--- a/src/builder/template/class.html
+++ b/src/builder/template/class.html
@@ -13,6 +13,8 @@
   <span data-s="className"></span>
 </h1>
 
+<div class="deprecated" data-s="deprecated"></div>
+
 <div data-s="classDesc">class description</div>
 
 <div data-s="fileexampleDoc">
