--- a/src/builder/template/members.html
+++ b/src/builder/template/members.html
@@ -1,10 +1,14 @@
 <div class="member" data-s="member">
   <h3 data-s="anchor">
+    <span data-s="deprecated"></span>
     <span class="access" data-s="access"></span>
     <span data-s="readonly"></span>
     <span data-s="name"></span><span data-s="signature">(x, y)</span>
     <span class="since" data-s="sinceLabel">since <span data-s="since"></span></span>
   </h3>
+
+  <div class="deprecated" data-s="deprecated"></div>
+
   <div data-s="description">description</div>
 
   <div data-s="example">
