--- a/src/builder/template/methods.html
+++ b/src/builder/template/methods.html
@@ -6,6 +6,9 @@
     <span data-s="name">method</span><span data-s="signature">(x, y)</span>
     <span class="since" data-s="sinceLabel">since <span data-s="since"></span></span>
   </h3>
+
+  <div class="deprecated" data-s="deprecated"></div>
+
   <div data-s="description">description</div>
 
   <div class="argument-params" data-s="argumentParams">
