--- a/src/builder/template/summary.html
+++ b/src/builder/template/summary.html
@@ -14,7 +14,10 @@
           <span data-s="name">member</span><span data-s="signature"></span>
         </p>
       </div>
-      <div data-s="description">description</div>
+      <div>
+        <div class="deprecated" data-s="deprecated"></div>
+        <div data-s="description">description</div>
+      </div>
     </td>
     <td>
       <span class="since" data-s="sinceLabel">since <span data-s="since"></span></span>
