feat(Typedef): support @typedef.

--- a/src/builder/template/members.html
+++ b/src/builder/template/members.html
@@ -1,6 +1,5 @@
 <div class="member" data-s="member">
   <h3 data-s="anchor">
-    <span data-s="deprecated"></span>
     <span class="access" data-s="access"></span>
     <span data-s="readonly"></span>
     <span data-s="name"></span><span data-s="signature">(x, y)</span>
@@ -11,6 +10,23 @@
 
   <div data-s="description">description</div>
 
+  <div data-s="properties">
+    <h4>Properties:</h4>
+    <table class="params">
+      <thead>
+      <tr><td>Name</td><td>Type</td><td>Attribute</td><td>Description</td></tr>
+      </thead>
+      <tbody>
+      <tr data-s="param">
+        <td data-s="name">x</td>
+        <td data-s="type">number</td>
+        <td data-s="appendix">optional</td>
+        <td data-s="paramDescription">desc</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
   <div data-s="example">
     <h4>Example:</h4>
     <pre data-s="exampleDoc" class="prettyprint"><code data-s="exampleCode"></code></pre>
@@ -19,4 +35,4 @@
   <div class="see" data-s="seeWrap">
     <h4 data-s="see">See: <span data-s="seeLink"></span></h4>
   </div>
-</div>
+</>
