--- a/src/builder/template/nav.html
+++ b/src/builder/template/nav.html
@@ -14,3 +14,8 @@
 <ul>
   <li data-s="namespaceDoc"><a data-s="namespace"></a></li>
 </ul>
+
+<h2>Typedefs</h2>
+<ul>
+  <li data-s="typedefDoc"><a data-s="typedef"></a></li>
+</ul>
