feat: support @property.

--- a/src/builder/template/members.html
+++ b/src/builder/template/members.html
@@ -10,22 +10,7 @@
 
   <div data-s="description">description</div>
 
-  <div data-s="properties">
-    <h4>Properties:</h4>
-    <table class="params">
-      <thead>
-      <tr><td>Name</td><td>Type</td><td>Attribute</td><td>Description</td></tr>
-      </thead>
-      <tbody>
-      <tr data-s="param">
-        <td data-s="name">x</td>
-        <td data-s="type">number</td>
-        <td data-s="appendix">optional</td>
-        <td data-s="paramDescription">desc</td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
+  <div data-s="properties"></div>
 
   <div data-s="example">
     <h4>Example:</h4>
