--- a/src/builder/template/methods.html
+++ b/src/builder/template/methods.html
@@ -11,26 +11,12 @@
 
   <div data-s="description">description</div>
 
-  <div class="argument-params" data-s="argumentParams">
-    <h4>Parameters:</h4>
-    <table class="params">
-      <thead>
-      <tr><td>Name</td><td>Type</td><td>Attribute</td><td>Description</td></tr>
-      </thead>
-      <tbody>
-      <tr data-s="param">
-        <td data-s="name">x</td>
-        <td data-s="type">number</td>
-        <td data-s="appendix">optional</td>
-        <td data-s="paramDescription">desc</td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
+  <div data-s="argumentParams"></div>
 
   <div class="return-params" data-s="returnParams">
     <h4>Return: <span class="return-type" data-s="returnType"></span></h4>
     <div class="return-desc" data-s="returnDescription"></div>
+    <div data-s="returnProperties"></div>
   </div>
 
   <div class="throws" data-s="throws">
