feat: support @typedef and @module

--- a/src/builder/template/class.html
+++ b/src/builder/template/class.html
@@ -1,11 +1,12 @@
-<p class="classNotice">
-  <span class="namespace" data-s="nameSpace"></span>
+<p class="header-notice">
+  <span data-s="namespace"></span>
 </p>
 
-<p class="classNotice">
-  <span class="classKind" data-s="classKind"></span>
-  <span class="extends" data-s="extends">| extends <a data-s="extendsClassName"></a></span>
-  <span class="implements" data-s="implements">| implements <span data-s="implementsClassName"></span></span>
+<p class="header-notice">
+  <span data-s="access"></span>
+  <span data-s="classKind"></span>
+  <span data-s="extends">| extends <a data-s="extendsClassName"></a></span>
+  <span data-s="implements">| implements <span data-s="implementsClassName"></span></span>
   <span data-s="sinceLabel">| since <span data-s="since"></span></span>
 </p>
 
@@ -17,9 +18,9 @@
 
 <div data-s="classDesc">class description</div>
 
-<div data-s="fileexampleDoc">
+<div data-s="fileexampleDocs">
   <h2>Example</h2>
-  <pre class="prettyprint"><code data-s="fileexampleCode"></code></pre>
+  <pre class="prettyprint" data-s="fileexampleDoc"><code data-s="fileexampleCode"></code></pre>
 </div>
 
 <div class="see" data-s="seeWrap">
@@ -45,35 +46,22 @@
 <div data-s="summaryProtectedMethodDocs"></div>
 <div data-s="summaryPrivateMethodDocs"></div>
 
-<h2 data-s="staticPublicMembersTitle">Static Public Members</h2>
 <div data-s="staticPublicMembers"></div>
-<h2 data-s="staticProtectedMembersTitle">Static Protected Members</h2>
 <div data-s="staticProtectedMembers"></div>
-<h2 data-s="staticPrivateMembersTitle">Static Private Members</h2>
 <div data-s="staticPrivateMembers"></div>
 
-<h2 data-s="staticPublicMethodsTitle">Static Public Methods</h2>
 <div data-s="staticPublicMethods"></div>
-<h2 data-s="staticProtectedMethodsTitle">Static Protected Methods</h2>
 <div data-s="staticProtectedMethods"></div>
-<h2 data-s="staticPrivateMethodsTitle">Static Private Methods</h2>
 <div data-s="staticPrivateMethods"></div>
 
-<h2 data-s="constructorTitle">Constructor</h2>
 <div data-s="constructor"></div>
 
-<h2 data-s="publicMembersTitle">Public Members</h2>
 <div data-s="publicMembers"></div>
-<h2 data-s="protectedMembersTitle">Protected Members</h2>
 <div data-s="protectedMembers"></div>
-<h2 data-s="privateMembersTitle">Private Members</h2>
 <div data-s="privateMembers"></div>
 
-<h2 data-s="publicMethodsTitle">Public Methods</h2>
 <div data-s="publicMethods"></div>
-<h2 data-s="protectedMethodsTitle">Protected Methods</h2>
 <div data-s="protectedMethods"></div>
-<h2 data-s="privateMethodsTitle">Private Methods</h2>
 <div data-s="privateMethods"></div>
 
 
