--- a/src/builder/template/members.html
+++ b/src/builder/template/members.html
@@ -1,3 +1,4 @@
+<h2 data-s="title"></h2>
 <div class="member" data-s="member">
   <h3 data-s="anchor">
     <span class="access" data-s="access"></span>
@@ -20,4 +21,4 @@
   <div class="see" data-s="seeWrap">
     <h4 data-s="see">See: <span data-s="seeLink"></span></h4>
   </div>
-</>
+</div>
