--- a/src/builder/template/methods.html
+++ b/src/builder/template/methods.html
@@ -1,3 +1,4 @@
+<h2 data-s="title"></h2>
 <div class="method" data-s="method">
   <h3 data-s="anchor">
     <span class="access" data-s="access"></span>
