--- a/src/builder/template/nav.html
+++ b/src/builder/template/nav.html
@@ -15,6 +15,11 @@
   <li data-s="namespaceDoc"><a data-s="namespace"></a></li>
 </ul>
 
+<h2>Modules</h2>
+<ul>
+  <li data-s="moduleDoc"><a data-s="module"></a></li>
+</ul>
+
 <h2>Typedefs</h2>
 <ul>
   <li data-s="typedefDoc"><a data-s="typedef"></a></li>
