--- a/src/builder/template/css/style.css
+++ b/src/builder/template/css/style.css
@@ -123,7 +123,7 @@ h1 .url a {
   padding: 10px 50px 10px 20px;
 }
 
-.classNotice {
+.header-notice {
   font-size: 14px;
   color: #aaa;
   margin: 0;
