--- a/src/builder/template/namespace.html
+++ b/src/builder/template/namespace.html
@@ -1,20 +1,57 @@
 <div data-s="parentNamespace"></div>
+
+<p class="header-notice">
+  <span data-s="access"></span>
+  <span data-s="kind"></span>
+  <span data-s="sinceLabel">| since <span data-s="since"></span></span>
+</p>
+
 <h1 data-s="namespace"></h1>
 <div data-s="namespaceDesc"></div>
 
-<div data-s="fileexampleDoc">
+<div data-s="fileexampleDocs">
   <h2>Example</h2>
-  <pre class="prettyprint"><code data-s="fileexampleCode"></code></pre>
+  <pre class="prettyprint" data-s="fileexampleDoc"><code data-s="fileexampleCode"></code></pre>
 </div>
 
-<h2>Summary</h2>
-<div data-s="summaryClassDocs"></div>
-<div data-s="summaryMemberDocs"></div>
-<div data-s="summaryMethodDocs"></div>
-<div data-s="summaryNamespaceDocs"></div>
+<h2 data-s="namespaceSummary">Namespace Summary</h2>
+<div data-s="summaryPublicNamespaceDocs"></div>
+<div data-s="summaryProtectedNamespaceDocs"></div>
+<div data-s="summaryPrivateNamespaceDocs"></div>
 
-<h2>Members</h2>
-<div data-s="memberDocs"></div>
+<h2 data-s="classSummary">Class Summary</h2>
+<div data-s="summaryPublicClassDocs"></div>
+<div data-s="summaryProtectedClassDocs"></div>
+<div data-s="summaryPrivateClassDocs"></div>
 
-<h2>Methods</h2>
-<div data-s="methodDocs"></div>
+<h2 data-s="interfaceSummary">Interface Summary</h2>
+<div data-s="summaryPublicInterfaceDocs"></div>
+<div data-s="summaryProtectedInterfaceDocs"></div>
+<div data-s="summaryPrivateInterfaceDocs"></div>
+
+<h2 data-s="memberSummary">Member Summary</h2>
+<div data-s="summaryPublicMemberDocs"></div>
+<div data-s="summaryProtectedMemberDocs"></div>
+<div data-s="summaryPrivateMemberDocs"></div>
+
+<h2 data-s="methodSummary">Method Summary</h2>
+<div data-s="summaryPublicMethodDocs"></div>
+<div data-s="summaryProtectedMethodDocs"></div>
+<div data-s="summaryPrivateMethodDocs"></div>
+
+<h2 data-s="typedefSummary">Typedef Summary</h2>
+<div data-s="summaryPublicTypedefDocs"></div>
+<div data-s="summaryProtectedTypedefDocs"></div>
+<div data-s="summaryPrivateTypedefDocs"></div>
+
+<div data-s="publicMemberDocs"></div>
+<div data-s="protectedMemberDocs"></div>
+<div data-s="privateMemberDocs"></div>
+
+<div data-s="publicMethodDocs"></div>
+<div data-s="protectedMethodDocs"></div>
+<div data-s="privateMethodDocs"></div>
+
+<div data-s="publicTypedefDocs"></div>
+<div data-s="protectedTypedefDocs"></div>
+<div data-s="privateTypedefDocs"></div>
