--- a/src/builder/template/typedef.html
+++ b/src/builder/template/typedef.html
@@ -1,16 +1,13 @@
-<h1>Typedef</h1>
+<p class="header-notice">
+  <span data-s="namespace"></span>
+</p>
 
-<h2>Summary</h2>
-<div data-s="summaryPublic"></div>
-<div data-s="summaryProtected"></div>
-<div data-s="summaryPrivate"></div>
+<p class="header-notice">
+  <span data-s="access"></span>
+  <span data-s="kind"></span>
+  <span data-s="sinceLabel">| since <span data-s="since"></span></span>
+</p>
 
+<h1 data-s="name"></h1>
 
-<h2 data-s="publicTypedefTitle">Public Typedefs</h2>
-<div data-s="publicTypedefs"></div>
-
-<h2 data-s="protectedTypedefTitle">Protected Typedefs</h2>
-<div data-s="protectedTypedefs"></div>
-
-<h2 data-s="privateTypedefTitle">Private Typedefs</h2>
-<div data-s="privateTypedefs"></div>
+<div data-s="typedef"></div>
