feat: support @mixin

--- a/src/builder/template/namespace.html
+++ b/src/builder/template/namespace.html
@@ -29,6 +29,11 @@
 <div data-s="summaryProtectedInterfaceDocs"></div>
 <div data-s="summaryPrivateInterfaceDocs"></div>
 
+<h2 data-s="mixinSummary">Mixin Summary</h2>
+<div data-s="summaryPublicMixinDocs"></div>
+<div data-s="summaryProtectedMixinDocs"></div>
+<div data-s="summaryPrivateMixinDocs"></div>
+
 <h2 data-s="memberSummary">Member Summary</h2>
 <div data-s="summaryPublicMemberDocs"></div>
 <div data-s="summaryProtectedMemberDocs"></div>
@@ -44,6 +49,11 @@
 <div data-s="summaryProtectedTypedefDocs"></div>
 <div data-s="summaryPrivateTypedefDocs"></div>
 
+<h2 data-s="eventSummary">Event Summary</h2>
+<div data-s="summaryPublicEventDocs"></div>
+<div data-s="summaryProtectedEventDocs"></div>
+<div data-s="summaryPrivateEventDocs"></div>
+
 <div data-s="publicMemberDocs"></div>
 <div data-s="protectedMemberDocs"></div>
 <div data-s="privateMemberDocs"></div>
@@ -55,3 +65,7 @@
 <div data-s="publicTypedefDocs"></div>
 <div data-s="protectedTypedefDocs"></div>
 <div data-s="privateTypedefDocs"></div>
+
+<div data-s="publicEventDocs"></div>
+<div data-s="protectedEventDocs"></div>
+<div data-s="privateEventDocs"></div>
