--- a/src/builder/template/nav.html
+++ b/src/builder/template/nav.html
@@ -24,3 +24,8 @@
 <ul>
   <li data-s="typedefDoc"><a data-s="typedef"></a></li>
 </ul>
+
+<h2>Mixins</h2>
+<ul>
+  <li data-s="mixinDoc"><a data-s="mixin"></a></li>
+</ul>
