feat: support @const

--- a/src/builder/template/namespace.html
+++ b/src/builder/template/namespace.html
@@ -54,6 +54,11 @@
 <div data-s="summaryProtectedEventDocs"></div>
 <div data-s="summaryPrivateEventDocs"></div>
 
+<h2 data-s="constSummary">Const Summary</h2>
+<div data-s="summaryPublicConstDocs"></div>
+<div data-s="summaryProtectedConstDocs"></div>
+<div data-s="summaryPrivateConstDocs"></div>
+
 <div data-s="publicMemberDocs"></div>
 <div data-s="protectedMemberDocs"></div>
 <div data-s="privateMemberDocs"></div>
@@ -69,3 +74,7 @@
 <div data-s="publicEventDocs"></div>
 <div data-s="protectedEventDocs"></div>
 <div data-s="privateEventDocs"></div>
+
+<div data-s="publicConstDocs"></div>
+<div data-s="protectedConstDocs"></div>
+<div data-s="privateConstDocs"></div>
