feat: support @variation.

--- a/src/builder/template/namespace.html
+++ b/src/builder/template/namespace.html
@@ -8,6 +8,7 @@
 
 <h1 data-s="namespace"></h1>
 <div data-s="namespaceDesc"></div>
+<div data-s="variation"></div>
 
 <div data-s="fileexampleDocs">
   <h2>Example</h2>
