feat: support @enum

--- a/src/builder/template/namespace.html
+++ b/src/builder/template/namespace.html
@@ -60,6 +60,11 @@
 <div data-s="summaryProtectedConstDocs"></div>
 <div data-s="summaryPrivateConstDocs"></div>
 
+<h2 data-s="enumSummary">Enum Summary</h2>
+<div data-s="summaryPublicEnumDocs"></div>
+<div data-s="summaryProtectedEnumDocs"></div>
+<div data-s="summaryPrivateEnumDocs"></div>
+
 <div data-s="publicMemberDocs"></div>
 <div data-s="protectedMemberDocs"></div>
 <div data-s="privateMemberDocs"></div>
@@ -79,3 +84,7 @@
 <div data-s="publicConstDocs"></div>
 <div data-s="protectedConstDocs"></div>
 <div data-s="privateConstDocs"></div>
+
+<div data-s="publicEnumDocs"></div>
+<div data-s="protectedEnumDocs"></div>
+<div data-s="privateEnumDocs"></div>
