feat: support @mixes

--- a/src/builder/template/namespace.html
+++ b/src/builder/template/namespace.html
@@ -3,6 +3,7 @@
 <p class="header-notice">
   <span data-s="access"></span>
   <span data-s="kind"></span>
+  <span data-s="mixesLabel">| mixes <span data-s="mixes"></span></span>
   <span data-s="sinceLabel">| since <span data-s="since"></span></span>
 </p>
 
