feat: support @callback

--- a/src/builder/template/namespace.html
+++ b/src/builder/template/namespace.html
@@ -66,6 +66,11 @@
 <div data-s="summaryProtectedEnumDocs"></div>
 <div data-s="summaryPrivateEnumDocs"></div>
 
+<h2 data-s="callbackSummary">Callback Summary</h2>
+<div data-s="summaryPublicCallbackDocs"></div>
+<div data-s="summaryProtectedCallbackDocs"></div>
+<div data-s="summaryPrivateCallbackDocs"></div>
+
 <div data-s="publicMemberDocs"></div>
 <div data-s="protectedMemberDocs"></div>
 <div data-s="privateMemberDocs"></div>
@@ -89,3 +94,7 @@
 <div data-s="publicEnumDocs"></div>
 <div data-s="protectedEnumDocs"></div>
 <div data-s="privateEnumDocs"></div>
+
+<div data-s="publicCallbackDocs"></div>
+<div data-s="protectedCallbackDocs"></div>
+<div data-s="privateCallbackDocs"></div>
