feat: support @fires.

--- a/src/builder/template/methods.html
+++ b/src/builder/template/methods.html
@@ -20,6 +20,12 @@
     <div data-s="returnProperties"></div>
   </div>
 
+  <div data-s="fires">
+    <div data-s="fire">
+      <h4>Fire: <span data-s="event"></span></h4>
+    </div>
+  </div>
+
   <div class="throws" data-s="throws">
     <div data-s="throw">
       <h4>Throw: <span data-s="throwName"></span></h4>
