--- a/src/builder/template/namespace.html
+++ b/src/builder/template/namespace.html
@@ -1,8 +1,11 @@
-<div data-s="parentNamespace"></div>
+<p class="header-notice">
+  <span data-s="parentNamespace"></span>
+</p>
 
 <p class="header-notice">
   <span data-s="access"></span>
   <span data-s="kind"></span>
+  <span data-s="requiresLabel">| requires <span data-s="require"></span></span>
   <span data-s="mixesLabel">| mixes <span data-s="mixes"></span></span>
   <span data-s="sinceLabel">| since <span data-s="since"></span></span>
 </p>
