feat: support @default

--- a/src/builder/template/members.html
+++ b/src/builder/template/members.html
@@ -11,6 +11,10 @@
 
   <div data-s="description">description</div>
 
+  <div data-s="defaultvalueWrap">
+    <h4>Default: <span data-s="defaultvalue"></span></h4>
+  </div>
+
   <div data-s="properties"></div>
 
   <div data-s="example">
