feat: support @listen

--- a/src/builder/template/methods.html
+++ b/src/builder/template/methods.html
@@ -21,8 +21,14 @@
   </div>
 
   <div data-s="fires">
-    <div data-s="fire">
+    <div data-s="fireEvent">
       <h4>Fire: <span data-s="event"></span></h4>
+    </div>
+  </div>
+
+  <div data-s="listens">
+    <div data-s="listenEvent">
+      <h4>Listen: <span data-s="event"></span></h4>
     </div>
   </div>
 
