feat: support @this

--- a/src/builder/template/methods.html
+++ b/src/builder/template/methods.html
@@ -20,6 +20,10 @@
     <div data-s="returnProperties"></div>
   </div>
 
+  <div data-s="thisWrap">
+    <h4>This: <span data-s="this"></span></h4>
+  </div>
+
   <div data-s="fires">
     <div data-s="fireEvent">
       <h4>Fire: <span data-s="event"></span></h4>
