--- a/src/builder/template/methods.html
+++ b/src/builder/template/methods.html
@@ -12,6 +12,10 @@
 
   <div data-s="description">description</div>
 
+  <div data-s="inheritWrap">
+    <h4>Override: <span data-s="inherit"></span></h4>
+  </div>
+
   <div data-s="argumentParams"></div>
 
   <div class="return-params" data-s="returnParams">
