--- a/src/builder/template/namespace.html
+++ b/src/builder/template/namespace.html
@@ -7,6 +7,7 @@
   <span data-s="kind"></span>
   <span data-s="requiresLabel">| requires <span data-s="require"></span></span>
   <span data-s="mixesLabel">| mixes <span data-s="mixes"></span></span>
+  <span data-s="versionLabel">| version <span data-s="version"></span></span>
   <span data-s="sinceLabel">| since <span data-s="since"></span></span>
 </p>
 
