--- a/src/builder/template/summary.html
+++ b/src/builder/template/summary.html
@@ -20,6 +20,7 @@
       </div>
     </td>
     <td>
+      <span class="version" data-s="versionLabel">version <span data-s="version"></span></span>
       <span class="since" data-s="sinceLabel">since <span data-s="since"></span></span>
     </td>
   </tr>
