--- a/src/builder/template/members.html
+++ b/src/builder/template/members.html
@@ -4,7 +4,10 @@
     <span class="access" data-s="access"></span>
     <span data-s="readonly"></span>
     <span data-s="name"></span><span data-s="signature">(x, y)</span>
-    <span class="since" data-s="sinceLabel">since <span data-s="since"></span></span>
+    <span class="right-info">
+      <span class="version" data-s="versionWrap">version <span data-s="version"></span></span>
+      <span class="since" data-s="sinceLabel">since <span data-s="since"></span></span>
+    </span>
   </h3>
 
   <div class="deprecated" data-s="deprecated"></div>
