--- a/src/builder/template/methods.html
+++ b/src/builder/template/methods.html
@@ -5,7 +5,10 @@
     <span class="virtual" data-s="virtual"></span>
     <span class="override" data-s="override"></span>
     <span data-s="name">method</span><span data-s="signature">(x, y)</span>
-    <span class="since" data-s="sinceLabel">since <span data-s="since"></span></span>
+    <span class="right-info">
+      <span class="version" data-s="versionWrap">version <span data-s="version"></span></span>
+      <span class="since" data-s="sinceLabel">since <span data-s="since"></span></span>
+    </span>
   </h3>
 
   <div class="deprecated" data-s="deprecated"></div>
