feat: support @author.

--- a/src/builder/template/methods.html
+++ b/src/builder/template/methods.html
@@ -58,4 +58,8 @@
   <div class="see" data-s="seeWrap">
     <h4 data-s="see">See: <span data-s="seeLink"></span></h4>
   </div>
+
+  <div data-s="authorWrap">
+    <h4>Author: <span data-s="author"></span></h4>
+  </div>
 </div>
