--- a/src/builder/template/namespace.html
+++ b/src/builder/template/namespace.html
@@ -9,6 +9,7 @@
   <span data-s="mixesLabel">| mixes <span data-s="mixes"></span></span>
   <span data-s="versionLabel">| version <span data-s="version"></span></span>
   <span data-s="sinceLabel">| since <span data-s="since"></span></span>
+  <span data-s="authorLabel">| author <span data-s="author"></span></span>
 </p>
 
 <h1 data-s="namespace"></h1>
