feat: support @file

--- a/src/builder/template/nav.html
+++ b/src/builder/template/nav.html
@@ -20,12 +20,17 @@
   <li data-s="moduleDoc"><a data-s="module"></a></li>
 </ul>
 
-<h2>Typedefs</h2>
-<ul>
-  <li data-s="typedefDoc"><a data-s="typedef"></a></li>
-</ul>
+<!--<h2>Typedefs</h2>-->
+<!--<ul>-->
+  <!--<li data-s="typedefDoc"><a data-s="typedef"></a></li>-->
+<!--</ul>-->
 
 <h2>Mixins</h2>
 <ul>
   <li data-s="mixinDoc"><a data-s="mixin"></a></li>
+</ul>
+
+<h2>Files</h2>
+<ul>
+  <li data-s="fileDoc"><a data-s="file"></a></li>
 </ul>
