--- a/src/builder/template/namespace.html
+++ b/src/builder/template/namespace.html
@@ -103,3 +103,8 @@
 <div data-s="publicCallbackDocs"></div>
 <div data-s="protectedCallbackDocs"></div>
 <div data-s="privateCallbackDocs"></div>
+
+<div data-s="sourceCodeWrap">
+  <h2>Source Code</h2>
+  <pre class="prettyprint"><code data-s="sourceCode"></code></pre>
+</div>
