--- a/src/builder/template/namespace.html
+++ b/src/builder/template/namespace.html
@@ -21,6 +21,13 @@
   <pre class="prettyprint" data-s="fileexampleDoc"><code data-s="fileexampleCode"></code></pre>
 </div>
 
+<div data-s="todoWrap">
+  <h2>TODO</h2>
+  <ul>
+    <li data-s="todo"></li>
+  </ul>
+</div>
+
 <h2 data-s="namespaceSummary">Namespace Summary</h2>
 <div data-s="summaryPublicNamespaceDocs"></div>
 <div data-s="summaryProtectedNamespaceDocs"></div>
