--- a/src/builder/template/namespace.html
+++ b/src/builder/template/namespace.html
@@ -13,6 +13,9 @@
 </p>
 
 <h1 data-s="namespace"></h1>
+
+<div class="deprecated" data-s="deprecated"></div>
+<div class="experimental" data-s="experimental"></div>
 <div data-s="namespaceDesc"></div>
 <div data-s="variation"></div>
 
