--- a/src/builder/template/summary.html
+++ b/src/builder/template/summary.html
@@ -16,6 +16,7 @@
       </div>
       <div>
         <div class="deprecated" data-s="deprecated"></div>
+        <div class="experimental" data-s="experimental"></div>
         <div data-s="description">description</div>
       </div>
     </td>
