--- a/src/builder/template/members.html
+++ b/src/builder/template/members.html
@@ -11,6 +11,7 @@
   </h3>
 
   <div class="deprecated" data-s="deprecated"></div>
+  <div class="experimental" data-s="experimental"></div>
 
   <div data-s="description">description</div>
 
