--- a/src/builder/template/methods.html
+++ b/src/builder/template/methods.html
@@ -12,6 +12,7 @@
   </h3>
 
   <div class="deprecated" data-s="deprecated"></div>
+  <div class="experimental" data-s="experimental"></div>
 
   <div data-s="description">description</div>
 
