fix: out put html file and the URL.

--- a/src/builder/template/namespace.html
+++ b/src/builder/template/namespace.html
@@ -20,6 +20,10 @@
 <div data-s="namespaceDesc"></div>
 <div data-s="variation"></div>
 
+<div class="see" data-s="seeWrap">
+  <h4 data-s="see">See: <span data-s="seeLink"></span></h4>
+</div>
+
 <div data-s="fileexampleDocs">
   <h2>Example</h2>
   <pre class="prettyprint" data-s="fileexampleDoc"><code data-s="fileexampleCode"></code></pre>
