--- a/src/builder/template/nav.html
+++ b/src/builder/template/nav.html
@@ -2,35 +2,30 @@
 
 <h2>Classes</h2>
 <ul>
-  <li data-s="classDoc"><a data-s="className"></a></li>
+  <li data-s="classDoc"></li>
 </ul>
 
 <h2>Interfaces</h2>
 <ul>
-  <li data-s="interfaceDoc"><a data-s="interfaceName"></a></li>
+  <li data-s="interfaceDoc"></li>
 </ul>
 
 <h2>Namespaces</h2>
 <ul>
-  <li data-s="namespaceDoc"><a data-s="namespace"></a></li>
+  <li data-s="namespaceDoc"></li>
 </ul>
 
 <h2>Modules</h2>
 <ul>
-  <li data-s="moduleDoc"><a data-s="module"></a></li>
+  <li data-s="moduleDoc"></li>
 </ul>
-
-<!--<h2>Typedefs</h2>-->
-<!--<ul>-->
-  <!--<li data-s="typedefDoc"><a data-s="typedef"></a></li>-->
-<!--</ul>-->
 
 <h2>Mixins</h2>
 <ul>
-  <li data-s="mixinDoc"><a data-s="mixin"></a></li>
+  <li data-s="mixinDoc"></li>
 </ul>
 
 <h2>Files</h2>
 <ul>
-  <li data-s="fileDoc"><a data-s="file"></a></li>
+  <li data-s="fileDoc"></li>
 </ul>
