--- a/src/builder/template/class.html
+++ b/src/builder/template/class.html
@@ -5,7 +5,7 @@
 <p class="header-notice">
   <span data-s="access"></span>
   <span data-s="classKind"></span>
-  <span data-s="extends">| extends <a data-s="extendsClassName"></a></span>
+  <span data-s="extendsLabel">| extends <span data-s="extends"></span></span>
   <span data-s="implements">| implements <span data-s="implementsClassName"></span></span>
   <span data-s="sinceLabel">| since <span data-s="since"></span></span>
 </p>
@@ -13,6 +13,12 @@
 <h1>
   <span data-s="className"></span>
 </h1>
+
+<div class="extends-chain" data-s="extendsChainWrap">
+  <div data-s="extendsChain"><h4>Extends Chain:</h4></div>
+  <div data-s="directSubclass"><h4>Direct Subclass:</h4></div>
+  <div data-s="indirectSubclass"><h4>Indirect Subclass:</h4></div>
+</div>
 
 <div class="deprecated" data-s="deprecated"></div>
 
