--- a/src/builder/template/css/style.css
+++ b/src/builder/template/css/style.css
@@ -129,6 +129,20 @@ h1 .url a {
   margin: 0;
 }
 
+.extends-chain {
+  border-bottom: 1px solid#ddd;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+
+.extends-chain span:nth-of-type(1) {
+  padding-left: 10px;
+}
+
+.extends-chain > div {
+  margin: 5px 0;
+}
+
 table.summary {
   width: 100%;
   margin: 10px 0;
