refactor: collect public/protected/private summary.

--- a/src/builder/template/class.html
+++ b/src/builder/template/class.html
@@ -33,24 +33,11 @@
   <h4 data-s="see">See: <span data-s="seeLink"></span></h4>
 </div>
 
-<h2>Summary</h2>
-<div data-s="summaryStaticPublicMemberDocs"></div>
-<div data-s="summaryStaticProtectedMemberDocs"></div>
-<div data-s="summaryStaticPrivateMemberDocs"></div>
-
-<div data-s="summaryStaticPublicMethodDocs"></div>
-<div data-s="summaryStaticProtectedMethodDocs"></div>
-<div data-s="summaryStaticPrivateMethodDocs"></div>
-
-<div data-s="summaryConstructorDocs"></div>
-
-<div data-s="summaryPublicMemberDocs"></div>
-<div data-s="summaryProtectedMemberDocs"></div>
-<div data-s="summaryPrivateMemberDocs"></div>
-
-<div data-s="summaryPublicMethodDocs"></div>
-<div data-s="summaryProtectedMethodDocs"></div>
-<div data-s="summaryPrivateMethodDocs"></div>
+<div data-s="staticMemberSummary"><h2>Static Member Summary</h2></div>
+<div data-s="staticMethodSummary"><h2>Static Method Summary</h2></div>
+<div data-s="constructorSummary"><h2>Constructor Summary</h2></div>
+<div data-s="memberSummary"><h2>Member Summary</h2></div>
+<div data-s="methodSummary"><h2>Method Summary</h2></div>
 
 <div data-s="staticPublicMembers"></div>
 <div data-s="staticProtectedMembers"></div>
