--- a/src/builder/template/namespace.html
+++ b/src/builder/template/namespace.html
@@ -36,60 +36,17 @@
   </ul>
 </div>
 
-<h2 data-s="namespaceSummary">Namespace Summary</h2>
-<div data-s="summaryPublicNamespaceDocs"></div>
-<div data-s="summaryProtectedNamespaceDocs"></div>
-<div data-s="summaryPrivateNamespaceDocs"></div>
-
-<h2 data-s="classSummary">Class Summary</h2>
-<div data-s="summaryPublicClassDocs"></div>
-<div data-s="summaryProtectedClassDocs"></div>
-<div data-s="summaryPrivateClassDocs"></div>
-
-<h2 data-s="interfaceSummary">Interface Summary</h2>
-<div data-s="summaryPublicInterfaceDocs"></div>
-<div data-s="summaryProtectedInterfaceDocs"></div>
-<div data-s="summaryPrivateInterfaceDocs"></div>
-
-<h2 data-s="mixinSummary">Mixin Summary</h2>
-<div data-s="summaryPublicMixinDocs"></div>
-<div data-s="summaryProtectedMixinDocs"></div>
-<div data-s="summaryPrivateMixinDocs"></div>
-
-<h2 data-s="memberSummary">Member Summary</h2>
-<div data-s="summaryPublicMemberDocs"></div>
-<div data-s="summaryProtectedMemberDocs"></div>
-<div data-s="summaryPrivateMemberDocs"></div>
-
-<h2 data-s="methodSummary">Method Summary</h2>
-<div data-s="summaryPublicMethodDocs"></div>
-<div data-s="summaryProtectedMethodDocs"></div>
-<div data-s="summaryPrivateMethodDocs"></div>
-
-<h2 data-s="typedefSummary">Typedef Summary</h2>
-<div data-s="summaryPublicTypedefDocs"></div>
-<div data-s="summaryProtectedTypedefDocs"></div>
-<div data-s="summaryPrivateTypedefDocs"></div>
-
-<h2 data-s="eventSummary">Event Summary</h2>
-<div data-s="summaryPublicEventDocs"></div>
-<div data-s="summaryProtectedEventDocs"></div>
-<div data-s="summaryPrivateEventDocs"></div>
-
-<h2 data-s="constSummary">Const Summary</h2>
-<div data-s="summaryPublicConstDocs"></div>
-<div data-s="summaryProtectedConstDocs"></div>
-<div data-s="summaryPrivateConstDocs"></div>
-
-<h2 data-s="enumSummary">Enum Summary</h2>
-<div data-s="summaryPublicEnumDocs"></div>
-<div data-s="summaryProtectedEnumDocs"></div>
-<div data-s="summaryPrivateEnumDocs"></div>
-
-<h2 data-s="callbackSummary">Callback Summary</h2>
-<div data-s="summaryPublicCallbackDocs"></div>
-<div data-s="summaryProtectedCallbackDocs"></div>
-<div data-s="summaryPrivateCallbackDocs"></div>
+<div data-s="namespaceSummary"><h2>Namespace Summary</h2></div>
+<div data-s="classSummary"><h2>Class Summary</h2></div>
+<div data-s="interfaceSummary"><h2>Interface Summary</h2></div>
+<div data-s="mixinSummary"><h2>Mixin Summary</h2></div>
+<div data-s="memberSummary"><h2>Member Summary</h2></div>
+<div data-s="methodSummary"><h2>Method Summary</h2></div>
+<div data-s="typedefSummary"><h2>Typedef Summary</h2></div>
+<div data-s="eventSummary"><h2>Event Summary</h2></div>
+<div data-s="constSummary"><h2>Const Summary</h2></div>
+<div data-s="enumSummary"><h2>Enum Summary</h2></div>
+<div data-s="callbackSummary"><h2>Callback Summary</h2></div>
 
 <div data-s="publicMemberDocs"></div>
 <div data-s="protectedMemberDocs"></div>
