--- a/src/builder/template/summary.html
+++ b/src/builder/template/summary.html
@@ -1,5 +1,5 @@
-<table class="summary">
-  <thead><tr><td data-s="title" colspan="3">Members</td></tr></thead>
+<table class="summary" data-s="summary">
+  <thead><tr><td data-s="title" colspan="3"></td></tr></thead>
   <tbody>
   <tr data-s="target">
     <td>
